	* OpenTx-Telemetry - split log according time entries into separate record sets
	* Futaba-Telemetry - fix parsing exception "---", enable visualization control and help
	* Futaba-Telemetry - fix EOFException saving OSD with record set different real size
	* Hitec X1 Red - add initial support (alpha)
	* WSTech DataVario - replace German description with supposed key

History analysis
	* Enhance UI
		>> Add support for triggered values (e.g. motor runtime height)
		>> Add refresh menu item and shortcut
		>> Add object key wizard (if accessing new directories) 
		>> Remove MessageBox "No log files"
		>> Fix importing from histo table with reversed x axis opens wrong file
		>> Fix InvalidPathException@_SupplementObjectDirs
		>> Fix wrong decimal places if switching from histo graphics to histo table
	* Remove searching in the current import path (is obsolete due to remote log file support)
	* Enhance performance
	 	>> Memory cache for aggregated histo data 
	 	>> Optimized directory scans for graphics refresh 
	 	>> Avoid multiple vault re-reading from the source log files
	 	>> Code optimizations to avoid materialization
	 	>> Remove syncing slave records for incomplete master records
	 	>> Avoid multiple sha1 hashing
	 	>> Remove method synchronizing keyword for methods not used in threads
 	* Support new file extensions separator

Version 3.3.2 - 15 Apr 2018
* fix illegal formatting option in ParameterControl used for Graupner UDP charger
* fix HoTTAdapter wrong data block number detection
* fix empty template file name if user cancels loading a template
* fix some issues when adding / editing object keys
* fix wrong interpretation and display of geo-coordinates received as degree with decimal digits
* fix parsing error with values coming with comma as separator to decimal places
* fix setting of time grid building new template
* fix circular UI update calls
* fix/tolerate Jeti new alarm protocol 
* context menu texts (graphics / data table tabs)