@@ -1646,16 +1646,17 @@ public class DataExplorer extends Composite {
 	 * @return the object keys, if there are no object key defined return an empty string array
 	 */
 	public void selectObjectKey(final String newObjectKey) {
-		if (this.settings != null && !this.getObjectKey().equals(newObjectKey)) {
+		if (this.settings != null && !this.channels.getActiveChannel().getObjectKey().equals(newObjectKey)) {
 			String[] objectKeys = this.settings.getObjectList();
 			for (int searchSelectionIndex = 0; searchSelectionIndex < objectKeys.length; ++searchSelectionIndex) {
 				if (newObjectKey.equals(objectKeys[searchSelectionIndex])) {
+					log.fine(() -> String.format("channel number %d - actual object key %s", this.channels.getActiveChannel().getNumber(), this.channels.getActiveChannel().getObjectKey()));
 					if (Thread.currentThread().getId() == DataExplorer.application.getThreadId()) {
 						this.menuToolBar.selectObjectKey(searchSelectionIndex);
 						this.channels.getActiveChannel().setObjectKey(newObjectKey);
 					} else {
 						final int selectionIndex = searchSelectionIndex;
-						GDE.display.asyncExec(new Runnable() {
+						GDE.display.syncExec(new Runnable() {
 							@Override
 							public void run() {
 								DataExplorer.this.menuToolBar.selectObjectKey(selectionIndex);
